upload code 30/12/2021 11:15PM

--- a/FrontEnd/src/components/frontend/Question/ContentQuestion.css
+++ b/FrontEnd/src/components/frontend/Question/ContentQuestion.css
@@ -55,8 +55,9 @@
     margin: 30px 0;
 }
 
-.content-question span {
-    font-size: 22px;
+.content-question p {
+    font-size: 20px;
+    text-align: justify;
 }
 
 .title-question{
